created and linked fish haven html

--- a/lesson-06/fish-haven.html
+++ b/lesson-06/fish-haven.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soda Springs Town Page | Neo Adam Bontia</title>
+    <title>Fish Haven Town Page | Neo Adam Bontia</title>
     <meta name="description"
-        content="Soda Springs Page for the Weather With Us Weather site made by Neo Adam Bontia for WDD 230 BYU-Idaho.">
+        content="Fish Haven Page for the Weather With Us Weather site made by Neo Adam Bontia for WDD 230 BYU-Idaho.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -37,8 +37,8 @@
         <ul id="primaryNav" class="hide">
             <li><a href="index.html">Home</a></li>
             <li><a href="preston.html">Preston</a></li>
-            <li class="active"><a href="#">Soda Springs</a></li>
-            <li><a href="fish-haven.html">Fish Haven</a></li>
+            <li><a href="soda-springs.html">Soda Springs</a></li>
+            <li class="active"><a href="#">Fish Haven</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
@@ -46,11 +46,12 @@
 
     <main>
         <div class="preston-content-container">
-            <h3>Soda Springs</h3>
+            <h3>Fish Haven</h3>
 
             <div class="hero-box">
                 <picture>
-                    <source srcset="images/soda-springs/hero_medium.jpg" media="(min-width: 500px) and (max-width: 799px)">
+                    <source srcset="images/soda-springs/hero_medium.jpg"
+                        media="(min-width: 500px) and (max-width: 799px)">
                     <source srcset="images/soda-springs/hero_large.jpg" media="(min-width: 800px)">
                     <img class="hero" src="images/soda-springs/hero_small.jpg" alt="Hero image">
                 </picture>
@@ -111,7 +112,8 @@
                                 alt="Facebook icon"></a></li>
                     <li><a href="https://www.instagram.com"><img src="images/soda-springs/instagram.png"
                                 alt="Instagram icon"></a></li>
-                    <li><a href="https://www.twitter.com"><img src="images/soda-springs/twitter.png" alt="Twitter icon"></a>
+                    <li><a href="https://www.twitter.com"><img src="images/soda-springs/twitter.png"
+                                alt="Twitter icon"></a>
                     </li>
                 </ul>
             </div>
