--- a/lesson-06/index.html
+++ b/lesson-06/index.html
@@ -34,7 +34,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="preston.html">Preston</a></li>
             <li><a href="soda-springs.html">Soda Springs</a></li>
-            <li><a href="#">Fish Haven</a></li>
+            <li><a href="fish-haven.html">Fish Haven</a></li>
             <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
