fixed css and javascript for fish haven

--- a/lesson-06/fish-haven.html
+++ b/lesson-06/fish-haven.html
@@ -13,10 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/soda-springs/normalize.css">
-    <link rel="stylesheet" href="css/soda-springs/small.css">
-    <link rel="stylesheet" href="css/soda-springs/medium.css">
-    <link rel="stylesheet" href="css/soda-springs/large.css">
+    <link rel="stylesheet" href="css/fish-haven/normalize.css">
+    <link rel="stylesheet" href="css/fish-haven/small.css">
+    <link rel="stylesheet" href="css/fish-haven/medium.css">
+    <link rel="stylesheet" href="css/fish-haven/large.css">
 </head>
 
 <body>
@@ -25,7 +25,7 @@
     </div>
 
     <header>
-        <img class="logo" src="images/soda-springs/logo.png" alt="Weather With Us logo">
+        <img class="logo" src="images/fish-haven/logo.png" alt="Weather With Us logo">
         <div>
             <h1 class="site-name">Weather With Us</h1>
             <h2 class="site-motto">Rain or shine, we can weather it out!</h2>
@@ -50,10 +50,10 @@
 
             <div class="hero-box">
                 <picture>
-                    <source srcset="images/soda-springs/hero_medium.jpg"
+                    <source srcset="images/fish-haven/hero_medium.jpg"
                         media="(min-width: 500px) and (max-width: 799px)">
-                    <source srcset="images/soda-springs/hero_large.jpg" media="(min-width: 800px)">
-                    <img class="hero" src="images/soda-springs/hero_small.jpg" alt="Hero image">
+                    <source srcset="images/fish-haven/hero_large.jpg" media="(min-width: 800px)">
+                    <img class="hero" src="images/fish-haven/hero_small.jpg" alt="Hero image">
                 </picture>
                 <div class="small">
                     <p>SMALL</p>
@@ -108,17 +108,17 @@
                 </ul>
 
                 <ul class="socials">
-                    <li><a href="https://www.facebook.com"><img src="images/soda-springs/facebook.png"
+                    <li><a href="https://www.facebook.com"><img src="images/fish-haven/facebook.png"
                                 alt="Facebook icon"></a></li>
-                    <li><a href="https://www.instagram.com"><img src="images/soda-springs/instagram.png"
+                    <li><a href="https://www.instagram.com"><img src="images/fish-haven/instagram.png"
                                 alt="Instagram icon"></a></li>
-                    <li><a href="https://www.twitter.com"><img src="images/soda-springs/twitter.png"
+                    <li><a href="https://www.twitter.com"><img src="images/fish-haven/twitter.png"
                                 alt="Twitter icon"></a>
                     </li>
                 </ul>
             </div>
 
-            <img class="map" src="images/soda-springs/map.jpg" alt="Location of Preston via map">
+            <img class="map" src="images/fish-haven/map.jpg" alt="Location of Preston via map">
         </div>
 
         <p>
@@ -129,7 +129,7 @@
 
         <div class="date-container"><span id="date"></span></div>
     </footer>
-    <script src="javascript/soda-springs/scripts.js"></script>
+    <script src="javascript/fish-haven/scripts.js"></script>
 </body>
 
 </html>
