Changed hero images and configurations for town pages.

--- a/lesson-06/fish-haven.html
+++ b/lesson-06/fish-haven.html
@@ -21,7 +21,7 @@
 
 <body>
     <div id="banner">
-        Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.
+        Town Fishing by the lake! 6:00 a.m. Monday at the lake.
     </div>
 
     <header>
@@ -50,20 +50,11 @@
 
             <div class="hero-box">
                 <picture>
-                    <source srcset="images/fish-haven/hero_medium.jpg"
+                    <source srcset="images/fish-haven/fishhaven.jpg"
                         media="(min-width: 500px) and (max-width: 799px)">
-                    <source srcset="images/fish-haven/hero_large.jpg" media="(min-width: 800px)">
-                    <img class="hero" src="images/fish-haven/hero_small.jpg" alt="Hero image">
+                    <source srcset="images/fish-haven/fishhaven.jpg" media="(min-width: 800px)">
+                    <img class="hero" src="images/fish-haven/fishhaven.jpg" alt="Hero image">
                 </picture>
-                <div class="small">
-                    <p>SMALL</p>
-                </div>
-                <div class="medium">
-                    <p>MEDIUM</p>
-                </div>
-                <div class="large">
-                    <p>LARGE</p>
-                </div>
 
                 <div class="weather-summary">
                     <h4>Weather Summary</h4>
