--- a/lesson-06/soda-springs.html
+++ b/lesson-06/soda-springs.html
@@ -21,7 +21,7 @@
 
 <body>
     <div id="banner">
-        Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.
+        Geyser Viewing! 10:00 a.m. Wednesday at the geyser.
     </div>
 
     <header>
@@ -50,19 +50,10 @@
 
             <div class="hero-box">
                 <picture>
-                    <source srcset="images/soda-springs/hero_medium.jpg" media="(min-width: 500px) and (max-width: 799px)">
-                    <source srcset="images/soda-springs/hero_large.jpg" media="(min-width: 800px)">
-                    <img class="hero" src="images/soda-springs/hero_small.jpg" alt="Hero image">
+                    <source srcset="images/soda-springs/sodasprings.jpg" media="(min-width: 500px) and (max-width: 799px)">
+                    <source srcset="images/soda-springs/sodasprings.jpg" media="(min-width: 800px)">
+                    <img class="hero" src="images/soda-springs/sodasprings.jpg" alt="Hero image">
                 </picture>
-                <div class="small">
-                    <p>SMALL</p>
-                </div>
-                <div class="medium">
-                    <p>MEDIUM</p>
-                </div>
-                <div class="large">
-                    <p>LARGE</p>
-                </div>
 
                 <div class="weather-summary">
                     <h4>Weather Summary</h4>
