Connected town event json

--- a/lesson-06/fish-haven.html
+++ b/lesson-06/fish-haven.html
@@ -67,6 +67,7 @@
                         Wind Speed: <span id="windSpeed"></span> mph
                     </p>
                 </div>
+                <div class="events-box"></div>
             </div>
 
             <div class="forecast">
