--- a/lesson-06/preston.html
+++ b/lesson-06/preston.html
@@ -64,6 +64,7 @@
                         Wind Speed: <span id="windSpeed"></span> mph
                         </p>
                 </div>
+                <div class="events-box"></div>
             </div>
 
             <div class="forecast">
