--- a/lesson-06/soda-springs.html
+++ b/lesson-06/soda-springs.html
@@ -66,6 +66,7 @@
                         Wind Speed: <span id="windSpeed"></span> mph
                     </p>
                 </div>
+                <div class="events-box"></div>
             </div>
 
             <div class="forecast">
