Changed article titles and images for town pages.

--- a/lesson-06/preston.html
+++ b/lesson-06/preston.html
@@ -73,16 +73,9 @@
             </div>
 
             <div class="article">
-                <h4>Article Title</h4>
-                <img class="article-img" src="https://picsum.photos/700/200" alt="Article image">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget, 
-                   scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi, 
-                   aliquet id semper eget, scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing 
-                   elit. Fusce quam nisi, aliquet id semper eget, scelerisque at tortor.Lorem ipsum dolor sit amet, 
-                   consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget, scelerisque at tortor. Lorem 
-                   ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget, 
-                   scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi, 
-                   aliquet id semper eget, scelerisque at tortor.</p>
+                <h4>Work Creek Revived!</h4>
+                <img class="article-img" src="images/preston/work-creek-article.jpg" alt="Image of Work Creek">
+                <p>The revival for Work Creek went off without a hitch on March 29, 2021.</p>
             </div>
         </div>
     </main>
