--- a/lesson-06/soda-springs.html
+++ b/lesson-06/soda-springs.html
@@ -75,8 +75,8 @@
             </div>
 
             <div class="article">
-                <h4>Article Title</h4>
-                <img class="article-img" src="https://picsum.photos/700/200" alt="Article image">
+                <h4>The Geyser That is Heard Around Idaho</h4>
+                <img class="article-img" src="images/soda-springs/geyser-article.jpg" alt="Article image">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget,
                     scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi,
                     aliquet id semper eget, scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing
