--- a/lesson-06/fish-haven.html
+++ b/lesson-06/fish-haven.html
@@ -76,8 +76,8 @@
             </div>
 
             <div class="article">
-                <h4>Article Title</h4>
-                <img class="article-img" src="https://picsum.photos/700/200" alt="Article image">
+                <h4>Now That is a BIG Fish</h4>
+                <img class="article-img" src="images/fish-haven/big-fish-article.jpg" alt="Article image">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget,
                     scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi,
                     aliquet id semper eget, scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing
