Added content for preston article.

--- a/lesson-06/preston.html
+++ b/lesson-06/preston.html
@@ -75,7 +75,15 @@
             <div class="article">
                 <h4>Work Creek Revived!</h4>
                 <img class="article-img" src="images/preston/work-creek-article.jpg" alt="Image of Work Creek">
-                <p>The revival for Work Creek went off without a hitch on March 29, 2021.</p>
+                <p>The revival for Work Creek went off without a hitch on March 29, 2021. Work Creek, which is located in Preston, Idaho
+                   has been needing some care since the 1990s. Luckily, the skies were clear for the community to help and revive Work Creek. <br><br>
+                   Multiple familes within the town of Preston has offered their help in cleaning Work Creek. Some of these families are
+                   the Bontia family, the Hill family, the Bolo family, the Cerbolles family, and the Bayani family just to name a few. Over
+                   200 individuals showed up and participated in the revival, both young and old. <br><br>
+                   "I was not expecting such a turn-out," said Ronan Hill, town mayor of Preston. Because of the huge support from the town,
+                   the creek's revival or maintenance will be held annually on March 29. Hopefully, in the coming years the weather will also
+                   be as ideal for the revival.
+                </p>
             </div>
         </div>
     </main>
