Added content to Soda Springs article

--- a/lesson-06/soda-springs.html
+++ b/lesson-06/soda-springs.html
@@ -77,14 +77,16 @@
             <div class="article">
                 <h4>The Geyser That is Heard Around Idaho</h4>
                 <img class="article-img" src="images/soda-springs/geyser-article.jpg" alt="Article image">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget,
-                    scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi,
-                    aliquet id semper eget, scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit. Fusce quam nisi, aliquet id semper eget, scelerisque at tortor.Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget, scelerisque at tortor. Lorem
-                    ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget,
-                    scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi,
-                    aliquet id semper eget, scelerisque at tortor.</p>
+                <p>Clear skies and clear tones resonated the Geyser Song in Soda Springs at February 29, 2021.
+                   What was expected to be a huge rainfall was then miraculously turned into clear skies paved
+                   the way for the biggest geyser event in Idaho. <br><br>
+                   More than 3000 people showed up in Soda Springs Geyser to commemorate its 10th year opening
+                   as a geyser tourist spot. To commemorate such an important event, the Tabernacle Choir at
+                   Temple Square were invited to sing the Geyser song with all of the residents of Idaho and
+                   tourists. <br><br>
+                   Usually weather around that time of the year does not yield for such an extravaggant event,
+                   but fingers are crossed for next year's Geyser Song Day.
+                </p>
             </div>
         </div>
     </main>
