Added content for fish haven article

--- a/lesson-06/fish-haven.html
+++ b/lesson-06/fish-haven.html
@@ -78,14 +78,17 @@
             <div class="article">
                 <h4>Now That is a BIG Fish</h4>
                 <img class="article-img" src="images/fish-haven/big-fish-article.jpg" alt="Article image">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget,
-                    scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi,
-                    aliquet id semper eget, scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit. Fusce quam nisi, aliquet id semper eget, scelerisque at tortor.Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget, scelerisque at tortor. Lorem
-                    ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi, aliquet id semper eget,
-                    scelerisque at tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quam nisi,
-                    aliquet id semper eget, scelerisque at tortor.</p>
+                <p>Not too warm, not too cold, and with a hefty serving of clouds makes a great weather for
+                   fishing, perfect for Fish Haven's How Big Was That Fish Day on April 1, 2021. Now I know
+                   April 1 is the day of jokes and pranks but we are not joking that a 30-inch trout was caught
+                   in one of Fish Haven's river, making it a very BIG fish. <br><br>
+                   Hundreds of fishermen from all-over Idaho went over to Fish Haven to compete for the biggest
+                   fish. As the weather was perfect for fishing, fishes of all shapes and sizes were caught.
+                   However, the 30-inch trout caught by Alberto Bolo caught everyone's attention and nabbed the
+                   title of the biggest fish that day. <br><br>
+                   Such an impressive catch is thanks to an ideal weather condition. The participants of today's
+                   How Big Was That Fish are eager for next year's run, and are hoping to nab their own 30-inch fish.
+                </p>
             </div>
         </div>
     </main>
