Linked json to rentals and fixed bugs in other json

--- a/scoots/scoots/index.html
+++ b/scoots/scoots/index.html
@@ -24,7 +24,7 @@
     <nav class="clearfix">
         <ul id="navBar" class="hide">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Rentals</a></li>
+            <li><a href="rentals.html">Rentals</a></li>
             <li><a href="#">Reservations</a></li>
             <li><a href="#">Tours</a></li>
             <li><a href="#">Contact</a></li>
@@ -50,7 +50,7 @@
                 <p>Choose from a wide selection of scooters and rental vehicles.
                    Be it for a single person or a party of five, for half-a-day
                    or the whole day, Scoots has you covered!</p>
-                <button><a href="#">CHECK OUT OUR RENTALS NOW</a></button>
+                <button><a href="rentals.html">CHECK OUT OUR RENTALS NOW</a></button>
             </div>
         </div>
 
@@ -97,6 +97,7 @@
         </div>
     </footer>
     <script src="js/general/scripts.js"></script>
+    <script src="js/home/scripts.js"></script>
 </body>
 
 </html>
