Retrieved data from json file.

--- a/scoots/scoots/rentals.html
+++ b/scoots/scoots/rentals.html
@@ -30,7 +30,24 @@
     </nav>
 
     <main>
-        
+        <div class="table-container">
+            <table id="rentals-table">
+                <tr>
+                    <th></th>
+                    <th></th>
+                    <th colspan="2">Reservation</th>
+                    <th colspan="2">Walk-in</th>
+                </tr>
+                <tr>
+                    <th>Rental Type</th>
+                    <th>Max. Persons</th>
+                    <th>Half Day (3 hours)</th>
+                    <th>Full Day</th>
+                    <th>Half Day (3 hours)</th>
+                    <th>Full Day</th>
+                </tr>
+            </table>
+        </div>
     </main>
 
     <footer>
