Finished rentals small view

--- a/scoots/scoots/index.html
+++ b/scoots/scoots/index.html
@@ -50,7 +50,7 @@
                 <p>Choose from a wide selection of scooters and rental vehicles.
                    Be it for a single person or a party of five, for half-a-day
                    or the whole day, Scoots has you covered!</p>
-                <button><a href="rentals.html">CHECK OUT OUR RENTALS NOW</a></button>
+                <a href="rentals.html"><button>CHECK OUT OUR RENTALS NOW</button></a>
             </div>
         </div>
 
