--- a/scoots/scoots/rentals.html
+++ b/scoots/scoots/rentals.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="css/general/small.css">
     <link rel="stylesheet" href="css/general/medium.css">
     <link rel="stylesheet" href="css/general/large.css">
+    <link rel="stylesheet" href="css/rentals/small.css">
+    <link rel="stylesheet" href="css/rentals/medium.css">
+    <link rel="stylesheet" href="css/rentals/large.css">
 </head>
 
 <body>
@@ -30,7 +33,35 @@
     </nav>
 
     <main>
+        <div class="gallery">
+            <div class="card">
+                <img src="images/rentals/honda-metro.jpg" alt="Honda Metro Scooter">
+                <p>Honda Metro Scooter</p>
+            </div>
+            <div class="card">
+                <img src="images/rentals/honda-dio.jpg" alt="Honda Dio Scooter">
+                <p>Honda Dio Scooter</p>
+            </div>
+            <div class="card">
+                <img src="images/rentals/honda-pcx.jpg" alt="Honda PCX150 Scooter">
+                <p>Honda PCX150 Scooter</p>
+            </div>
+            <div class="card">
+                <img src="images/rentals/honda-pioneer.jpg" alt="Honda Pioneer ATV">
+                <p>Honda Pioneer ATV</p>
+            </div>
+            <div class="card">
+                <img src="images/rentals/jeep-4.jpg" alt="Jeep Wrangler—4 door with a/c">
+                <p>Jeep Wrangler—4 Doors With A/C</p>
+            </div>
+            <div class="card">
+                <img src="images/rentals/jeep-2.jpg" alt="Jeep Wrangler—2 door">
+                <p>Jeep Wrangler—2 Doors</p>
+            </div>
+        </div>
+
         <div class="table-container">
+            <h2>RATES</h2>
             <table id="rentals-table">
                 <tr>
                     <th></th>
@@ -47,6 +78,11 @@
                     <th>Full Day</th>
                 </tr>
             </table>
+        </div>
+
+        <div class="cta">
+            <h3>Found what you're looking for?</h3>
+            <a href="#"><button>RESERVE YOURS NOW</button></a>
         </div>
     </main>
 
