Initiliazed and linked reservations page

--- a/scoots/scoots/index.html
+++ b/scoots/scoots/index.html
@@ -25,7 +25,7 @@
         <ul id="navBar" class="hide">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="rentals.html">Rentals</a></li>
-            <li><a href="#">Reservations</a></li>
+            <li><a href="reservation.html">Reservations</a></li>
             <li><a href="#">Tours</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
@@ -38,7 +38,7 @@
                     <h1>Experience Cozumel the right way</h1>
                 </div>
                 <div class="link">
-                    <a href="#"><button>RESERVE NOW</button></a>
+                    <a href="reservation.html"><button>RESERVE NOW</button></a>
                 </div>
             </div>
         </div>
