--- a/scoots/scoots/rentals.html
+++ b/scoots/scoots/rentals.html
@@ -26,7 +26,7 @@
         <ul id="navBar" class="hide">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="#">Rentals</a></li>
-            <li><a href="#">Reservations</a></li>
+            <li><a href="reservation.html">Reservations</a></li>
             <li><a href="#">Tours</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
@@ -82,7 +82,7 @@
 
         <div class="cta">
             <h3>Found what you're looking for?</h3>
-            <a href="#"><button>RESERVE YOURS NOW</button></a>
+            <a href="reservation.html"><button>RESERVE YOURS NOW</button></a>
         </div>
     </main>
 
