Finished tours page

--- a/scoots/scoots/index.html
+++ b/scoots/scoots/index.html
@@ -26,7 +26,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="rentals.html">Rentals</a></li>
             <li><a href="reservation.html">Reservations</a></li>
-            <li><a href="#">Tours</a></li>
+            <li><a href="tours.html">Tours</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
