--- a/scoots/scoots/reservation.html
+++ b/scoots/scoots/reservation.html
@@ -27,7 +27,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="rentals.html">Rentals</a></li>
             <li class="active"><a href="#">Reservations</a></li>
-            <li><a href="#">Tours</a></li>
+            <li><a href="tours.html">Tours</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
