--- a/scoots/scoots/tours.html
+++ b/scoots/scoots/tours.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scoots | Rentals</title>
+    <title>Scoots | Tours</title>
     <meta name="description"
-        content="Scooter Rental website. Rentals Page. Project of Neo Adam Bontia for the course WDD 230 of BYU-Idaho.">
+        content="Scooter Rental website. Tours Page. Project of Neo Adam Bontia for the course WDD 230 of BYU-Idaho.">
     <link rel="stylesheet" href="css/general/normalize.css">
     <link rel="stylesheet" href="css/general/small.css">
     <link rel="stylesheet" href="css/general/medium.css">
     <link rel="stylesheet" href="css/general/large.css">
-    <link rel="stylesheet" href="css/rentals/small.css">
-    <link rel="stylesheet" href="css/rentals/medium.css">
-    <link rel="stylesheet" href="css/rentals/large.css">
+    <link rel="stylesheet" href="css/tours/small.css">
+    <link rel="stylesheet" href="css/tours/medium.css">
+    <link rel="stylesheet" href="css/tours/large.css">
 </head>
 
 <body>
@@ -25,9 +25,9 @@
     <nav class="clearfix">
         <ul id="navBar" class="hide">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="#">Rentals</a></li>
+            <li><a href="rentals.html">Rentals</a></li>
             <li><a href="reservation.html">Reservations</a></li>
-            <li><a href="tours.html">Tours</a></li>
+            <li class="active"><a href="#">Tours</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
@@ -35,54 +35,68 @@
     <main>
         <div class="gallery">
             <div class="card">
-                <img src="images/rentals/honda-metro.jpg" alt="Honda Metro Scooter">
-                <p>Honda Metro Scooter</p>
+                <img src="images/tours/cozumel-marketplace.jpg" alt="Cozumel Marketplace">
+                <div class="caption">
+                    <h3>Cozumel Marketplace</h3>
+                    <p>It's always lively.</p>
+                </div>
             </div>
+
             <div class="card">
-                <img src="images/rentals/honda-dio.jpg" alt="Honda Dio Scooter">
-                <p>Honda Dio Scooter</p>
+                <img src="images/tours/el-cielo.jpg" alt="El Cielo">
+                <div class="caption">
+                    <h3>El Cielo</h3>
+                    <p>It's as if you're swimming in the sky.</p>
+                </div>
             </div>
+
             <div class="card">
-                <img src="images/rentals/honda-pcx.jpg" alt="Honda PCX150 Scooter">
-                <p>Honda PCX150 Scooter</p>
+                <img src="images/tours/island-square.jpg" alt="Island Square">
+                <div class="caption">
+                    <h3>Cozumel Island Square</h3>
+                    <p>Be in the middle of the fun.</p>
+                </div>
             </div>
+
             <div class="card">
-                <img src="images/rentals/honda-pioneer.jpg" alt="Honda Pioneer ATV">
-                <p>Honda Pioneer ATV</p>
+                <img src="images/tours/lighthouse.jpg" alt="Lighthouse">
+                <div class="caption">
+                    <h3>Lighthouse</h3>
+                    <p>It's never dark here.</p>
+                </div>
             </div>
+
             <div class="card">
-                <img src="images/rentals/jeep-4.jpg" alt="Jeep Wrangler—4 door with a/c">
-                <p>Jeep Wrangler—4 Doors With A/C</p>
+                <img src="images/tours/resort.jpg" alt="Resort">
+                <div class="caption">
+                    <h3>InterContinental Presidente Cozumel Resort Spa</h3>
+                    <p>Best place to unwind.</p>
+                </div>
             </div>
+
             <div class="card">
-                <img src="images/rentals/jeep-2.jpg" alt="Jeep Wrangler—2 door">
-                <p>Jeep Wrangler—2 Doors</p>
+                <img src="images/tours/rocky-front.jpg" alt="Rocky front">
+                <div class="caption">
+                    <h3>Rocky Beach Front</h3>
+                    <p>It's actually smooth sailing from here.</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="images/tours/white-sand.jpg" alt="White Sand">
+                <div class="caption">
+                    <h3>Cozumel's White Sand Beaches</h3>
+                    <p>What more can you ask for?</p>
+                </div>
             </div>
         </div>
-
-        <div class="table-container">
-            <h2>RATES</h2>
-            <table id="rentals-table">
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th colspan="2">Reservation</th>
-                    <th colspan="2">Walk-in</th>
-                </tr>
-                <tr>
-                    <th>Rental Type</th>
-                    <th>Max. Persons</th>
-                    <th>Half Day (3 hours)</th>
-                    <th>Full Day</th>
-                    <th>Half Day (3 hours)</th>
-                    <th>Full Day</th>
-                </tr>
-            </table>
-        </div>
-
-        <div class="cta">
-            <h3>Found what you're looking for?</h3>
-            <a href="reservation.html"><button>RESERVE YOURS NOW</button></a>
+        <div class="rating">
+            <h2>"</h2><h3>100/10! Truly a wonder worth visiting!</h3><h2>"</h2>
+            <h4>- Jessica Bolo</h4>
+            <h2>"</h2><h3>Everyone should visit Cozumel at least once in their lifetime.</h3><h2>"</h2>
+            <h4>- Ronan Hill</h4>
+            <h2>"</h2><h3>A vacation spent in Cozumel is a vacation well-spent.</h3><h2>"</h2>
+            <h4>- Kreighner Cerbolles</h4>
         </div>
     </main>
 
@@ -118,7 +132,6 @@
         </div>
     </footer>
     <script src="js/general/scripts.js"></script>
-    <script src="js/rentals/scripts.js"></script>
 </body>
 
 </html>
