Finished contacts page

--- a/scoots/scoots/reservation.html
+++ b/scoots/scoots/reservation.html
@@ -28,7 +28,7 @@
             <li><a href="rentals.html">Rentals</a></li>
             <li class="active"><a href="#">Reservations</a></li>
             <li><a href="tours.html">Tours</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contacts.html">Contact</a></li>
         </ul>
     </nav>
 
