--- a/scoots/scoots/index.html
+++ b/scoots/scoots/index.html
@@ -27,7 +27,7 @@
             <li><a href="rentals.html">Rentals</a></li>
             <li><a href="reservation.html">Reservations</a></li>
             <li><a href="tours.html">Tours</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contacts.html">Contact</a></li>
         </ul>
     </nav>
 
