--- a/scoots/scoots/rentals.html
+++ b/scoots/scoots/rentals.html
@@ -28,7 +28,7 @@
             <li class="active"><a href="#">Rentals</a></li>
             <li><a href="reservation.html">Reservations</a></li>
             <li><a href="tours.html">Tours</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contacts.html">Contact</a></li>
         </ul>
     </nav>
 
