Fixed a bug in the nav

--- a/scoots/scoots/index.html
+++ b/scoots/scoots/index.html
@@ -22,7 +22,7 @@
         <button onclick="toggleMenu()">&#9776;</button>
     </header>
     <nav class="clearfix">
-        <ul id="navBar" class="hide">
+        <ul id="navBar">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="rentals.html">Rentals</a></li>
             <li><a href="reservation.html">Reservations</a></li>
